12/18/12 TestEquationNodes: delete some redundant test cases to make room for testing fractional y-intercept
12/17/12 move algorithm for fractional y-intercept into model
12/17/12 test program for converting y-intercept from decimal to improper fraction
12/17/12 MTE challenges: show the user's guess line (black) when the user's guess is correct
12/17/12 GTL challenges: show the answer line (green) when user's guess is correct
12/17/12 keep the color of "your line" consistently black
12/17/12 change request: put check-mark and "X" icons in upper-right corner of equation boxes
12/17/12 restore game tab
12/17/12 rewrite layout code for point-slope equations so that it adds, rather than deletes, nodes
12/17/12 rewrite layout code for slope-intercept equations so that it adds, rather than deletes, nodes
# 0.00.42 (70534) Nov 20, 2012
11/20/12 dev version with smaller subscripts
11/20/12 subscripts are too small with <small> tag, revert to <font size='-1'>
11/20/12 use <small> instead of <font size='3'> for subscripts, because <font> is deprecated in HTML4.01 and unsupported in HTML5
11/20/12 fill in {0} in "{0}=# (slope undefined)" with the translated symbol for "x"
11/20/12 move symbol subscripting (x1,y1,...) into code, make subscripts smaller
# 0.00.41 (70308) Nov 14, 2012
11/14/12 fix: represent y=x and y=-x in slope-intercept form in "Point-Slope" tab
11/14/12 change request: "Save line" -> "Save Line", "Erase lines" -> "Erase Lines"
# 0.00.40 (70166) Nov 10, 2012
11/10/12 dev version for interviews on first 3 tabs
11/10/12 temporarily hide "Line Game" tab
11/10/12 fix: incorrect order of range params in PointSlopeEquationNode constructor was allowing out-of-range values in spinners
11/7/12 make "Line Game" tab accessible
# 0.00.39 (70077) Nov 7, 2012
11/7/12 fix: pad equation control panel width a little bit, so that undefined-slope indicator doesn't make the control panel resize